--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8" >
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" >
   <title>SD Web 2 Assignment 1</title>
   <link rel="stylesheet" href="main.css" />
   
@@ -11,8 +11,8 @@
 <body>
     <nav>
       <div><a href="index.html">Home</a>
-      <a href="idk">About</a>
-      <a href="idk again">Settings</a></div>
+      <a href="">About</a>
+      <a href="">Settings</a></div>
       
       <!-- Create a list with placeholder links for 3 other pages -->
     </nav>
@@ -111,7 +111,7 @@
           <div>
             <h1>Article Title</h1>
             <p></p>
-            <img src="" alt="" />
+            
             <div>
               <!-- Author information -->
             </div>
@@ -127,11 +127,11 @@
         </div>
       </div>
     </div>
-  </div>
+  
   <div>
     <p>&copy; 2025 SAIT</p>
   </div>
-</div>
+
 <script src="script.js"></script>
 </body>
 </html>
